# mltemplate

./: .pylintrc  Makefile  README.md  _README.md  initial_setup.py  mltemplate_setup.py  pyproject.toml
.github/: init.sh  rename_project.sh  template.yml
.github/workflows/: ci.yml  rename_project.yml
docker/: README.md  _docker-compose.yml  docker-compose.yml
docker/backend/: Dockerfile
docker/compose/: Dockerfile
docker/dev/: Dockerfile
docker/mltemplate/: Dockerfile
docker/nvidia_12.2.2/: Dockerfile
docker/release/: Dockerfile
docker/test/: Dockerfile
docs/: conf.py  index.rst
mltemplate/: __init__.py
mltemplate/backend/deployment/: __init__.py  connection_client.py  deployment_server.py  types.py
mltemplate/backend/discord/: __init__.py  discord_client.py
mltemplate/backend/gateway/: __init__.py  connection_client.py  gateway_server.py  server.py  types.py
mltemplate/backend/training/: __init__.py  connection_client.py  server.py  training_server.py  types.py
mltemplate/configs/: train.yaml
mltemplate/configs/dataset/: mnist.yaml
mltemplate/configs/hydra/: default.yaml
mltemplate/configs/mlflow/: default.yaml
mltemplate/configs/model/: cnn.yaml  mlp.yaml
mltemplate/configs/paths/: default.yaml
mltemplate/configs/trainer/: default.yaml
mltemplate/core/: __init__.py  base.py  config.ini  config.py  mltemplate_base.py  registry.py
mltemplate/data/: __init__.py  mnist.py
mltemplate/models/: __init__.py  cnn.py  mlp.py
mltemplate/modules/: __init__.py  gpt.py  registry.py
mltemplate/scripts/: create_project_directories.py  train.py
mltemplate/types/: __init__.py  message.py
mltemplate/utils/: __init__.py  checks.py  conversions.py  dynamic.py  lightning.py  logging.py  mlflow.py  timer.py  timer_collection.py
tests/: __init__.py
tests/mltemplate/core/: test_config.py  test_registry.py
tests/mltemplate/modules/: test_registry.py
tests/mltemplate/utils/: test_checks.py  test_conversions.py  test_logging.py  test_timer.py  test_timer_collection.py
tests/resources/: critic_preamble.txt  mock_assets.py  utils.py
