[project]
name = "mltemplate"
version = "0.1.0"
description = "An end-to-end starter template for machine learning projects."
authors = [
    { name = "Jeremy Wurbs" }
]
dependencies = [
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "torchmetrics>=1.2.1",
    "lightning>=2.1.3",
    "hydra-core>=1.3.2",
    "mlflow>=2.9.2",
    "tensorboard>=2.15.1",
    "tensorboardx>=2.6.2.2",
    "fastapi>=0.108.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.25.0",
    "discord.py>=2.3.2",
    "Pillow>=10.1.0",
    "numpy>=1.26.2",
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.8.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "mltemplate:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.3",
    "httpx>=0.26.0",
    "Sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-simplepdf>=1.6.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[tool.rye.scripts]
lint = {chain = ["echo:lint", "lint:pylint", "echo:black:mltemplate", "lint:black:mltemplate", "echo:black:tests", "lint:black:tests", "echo:mypy", "lint:black:tests"]}
"echo:lint" = "echo 'pylint mltemplate/'"
"lint:pylint" = "pylint mltemplate/"
"echo:black:mltemplate" = "echo '\nblack -l 120 --check mltemplate/'"
"lint:black:mltemplate" = "black -l 120 --check mltemplate/"
"echo:black:tests" = "echo '\nblack -l 120 --check tests/'"
"lint:black:tests" = "black -l 120 --check tests/"
"echo:mypy" = "echo '\nmypy --ignore-missing-imports mltemplate/'"
"lint:mypy" = "mypy --ignore-missing-imports mltemplate/"
test = {chain = ["echo:test", "test:pytest"]}
"echo:test" = "echo 'pytest -rs --cov=mltemplate --maxfail=1 --cov-report term-missing -W ignore::DeprecationWarning tests/'"
"test:pytest" = "pytest -rs --cov=mltemplate --maxfail=1 --cov-report term-missing -W ignore::DeprecationWarning tests/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mltemplate"]
